# reverse-feature-selection

./: .amlignore  .buildinfo  .gitignore  LICENSE  Makefile  README.md  azure_config.yaml  azure_config_test.yaml  azure_test.py  code-doc.html  format_packages.txt  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  results_test_data_1026_result_dict.pkl  resultsdelete_me_result_dict.pkl  search.html  searchindex.js  settings.toml  setup.cfg
.github/workflows/: build_deploy_doc.yml  mypy_check.yml  pypi_upload.yml  pytest.yml  ruff_check.yml  static_checks.yml
_modules/: index.html
_modules/reverse_feature_selection/: reverse_random_forests.html  reverse_rf_random.html
_sources/: code-doc.rst.txt  index.rst.txt
archive/: evaluate_feature_selection_02.py  feature_selection_experiment.py  reverse_celer.py  reverse_lasso_feature_selection_doubleHPO.py  reverse_lasso_sklearn.py  reverse_relaxed_lasso.py  reverse_relaxed_lasso_feature_selection.py  reverse_rf_feature_selection_doubleHPO.py  settings.toml  standard_rf.py  test_ranger_rf.py  validation.py  visualize_evaluation.py  weighted_knn.py
archive/reverse_feature_selection_archive/: feature_subset_selection.py  filter_methods.py  gbdt_model.py  main.py  optuna_study_pruner.py  preprocessing.py  relaxed_lasso_feature_selection.py  reverse_lasso.py  reverse_rf_feature_selection.py  reverse_rf_oob_feature_selection.py  reverse_selection.py  reverse_trees.py  settings.py  stability_estimator.py  standard_lasso_feature_selection.py  standard_lasso_selection.py  tree_feature_selection.py  tree_model.py  utils.py  validation.py
data/: data.csv  small_50.csv
docs/source/: code-doc.rst  conf.py
docs/source/_static/: custom.css
feature_selection_benchmark/: __init__.py  cross_validation.py  data_loader_tools.py  feature_selection_experiment.py  ranger_rf.py  repeated_experiments_reverse_rf.py  repeated_experiments_reverse_rf_threshold_comparison.py  repeated_experiments_standard_rf.py  repeated_experiments_standard_rf_azure.py  robustness_performance_trade_off.py  standard_rf.py  standard_rf_azure.py  test_data_loader_tools.py
feature_selection_benchmark/feature_selection_evaluation/: __init__.py  evaluate_feature_selection.py  evaluation2.py  stability_estimator.py
feature_selection_benchmark/tests/: __init__.py  test_data_loader_tools.py
random_noise_data/: random_noise_lognormal_30_2000.csv  random_noise_normal_(30, 2000).csv  tiny_test_dataset_random_noise_lognormal.csv
reverse_feature_selection/: basic_example.py  preprocessing.py  reverse_feature_selection_example.ipynb  reverse_random_forests.py  reverse_rf_random.py
src/reverse_feature_selection/: __init__.py  cross_validation.py  data_loader_tools.py  feature_selection.py  feature_subset_selection.py  filter_methods.py  gbdt_model.py  main.py  optuna_study_pruner.py  preprocessing.py  relaxed_lasso_feature_selection.py  reverse_group_lasso.py  reverse_lasso.py  reverse_lasso_feature_selection.py  reverse_relaxed_lasso_feature_selection.py  reverse_rf_feature_selection.py  reverse_rf_oob_feature_selection.py  reverse_rf_random.py  reverse_rf_random_ray.py  reverse_selection.py  reverse_trees.py  rf_feature_selection.py  settings.py  stability_estimator.py  standard_lasso_feature_selection.py  standard_lasso_selection.py  standard_rf.py  study_pruner.py  tree_feature_selection.py  tree_model.py  utils.py  validation.py  weighted_knn.py  weighted_manhattan_distance.py
src/reverse_rf/: data_loader.py  main.py  preprocessing.py  reverse_rf.py  standard_rf.py
src/validation/: __init__.py  evaluate_feature_selection.py  evaluate_feature_selection_old.py  evaluate_reproducibility.py  stability_estimator.py  validation.py  weighted_manhattan_distance.py
test/: __init__.py  test_data_loader_tools.py  test_evaluate_feature_selection.py  test_preprocessing.py  test_repeated_experiments_reverse_rf.py  test_reverse_random_forest.py  test_reverse_rf_random.py  test_stability_estimator.py
tests/: __init__.py  test_data_loader_tools.py  test_evaluate_feature_selection.py  test_preprocessing.py  test_repeated_experiments_reverse_rf.py  test_reverse_random_forests.py  test_stability_estimator.py
